[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/monitor/monitor_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://entities/monitor/text_updater.gd" type="Script" id=2]
[ext_resource path="res://textures/white-circle.png" type="Texture" id=3]
[ext_resource path="res://entities/monitor/Meters.gd" type="Script" id=4]

[node name="monitor-content" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_bottom = -4.0
grow_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Power" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 97.0
margin_bottom = 34.0

[node name="Prefix" type="Label" parent="VBoxContainer/Power"]
margin_right = 62.0
margin_bottom = 34.0
grow_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "Pow:"
valign = 2

[node name="Number" type="Label" parent="VBoxContainer/Power"]
margin_left = 66.0
margin_right = 80.0
margin_bottom = 34.0
grow_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "1"
valign = 2

[node name="Temperature" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 97.0
margin_bottom = 72.0

[node name="Prefix" type="Label" parent="VBoxContainer/Temperature"]
margin_right = 79.0
margin_bottom = 34.0
grow_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "Temp:"
valign = 2

[node name="Number" type="Label" parent="VBoxContainer/Temperature"]
margin_left = 83.0
margin_right = 97.0
margin_bottom = 34.0
grow_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "1"
valign = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerMeter" type="TextureProgress" parent="HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
max_value = 101.0
rounded = true
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 4
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0.984314, 0, 1 )
nine_patch_stretch = true

[node name="TemperatureMeter" type="TextureProgress" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
min_value = 40.0
max_value = 110.0
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 4
tint_under = Color( 0, 0, 1, 1 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true

[node name="MiniClock" type="TextureProgress" parent="HBoxContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 4
tint_under = Color( 0.505882, 0.505882, 0.505882, 1 )
nine_patch_stretch = true
